--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,8 +26,7 @@ jobs:
       - name: Setup NDK path
         run: echo "ANDROID_NDK_ROOT=${ANDROID_HOME}/ndk/23.1.7779620/" >> $GITHUB_ENV
       - name: Build project
-        run:
-          ./build.sh
+        run: ./build.sh
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
